--- a/gym/index.html
+++ b/gym/index.html
@@ -8,6 +8,7 @@
     <title>GYM</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="EstilosGym.css">
+    <!-- <link rel="import" href="example.html"> -->
 
 
 </head>
@@ -190,6 +191,7 @@
             </div>
         </div>
     </nav>
+    <!-- <iframe src="example.html" width="100%"></iframe> -->
 
 
 
@@ -214,6 +216,7 @@
             </div>
         </div>
     </template>
+
 
     <script src="scripts/index.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
